--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,14 @@
-Source: upstream-name
-Section: admin
+Source: booster
+Section: main
 Priority: optional
-Maintainer: name <email>
+Maintainer: ferrreo <harderthanfire@gmail.com>
 Standards-Version: 4.6.1
-Build-Depends: debhelper-compat (= 13)
+Build-Depends: 
+ debhelper-compat (= 13), golang-go
 Rules-Requires-Root: no
 
-Package: pkgname1
+Package: booster
 Architecture: linux-any
-# Delete any of these lines if un-used
-Depends: ${misc:Depends}, depends
-Recommends: high priority optdepends
-Conflicts: conflicts
-Suggests: low priority optdepends
-Breaks: also conflicts!?
-Provides: provides
-#
-Description: pkgdesc
+Depends: ${misc:Depends}
+Provides: booster
+Description: booster initramfs generation
