--- a/debian/control
+++ b/debian/control
@@ -4,11 +4,11 @@ Priority: optional
 Maintainer: ferrreo <harderthanfire@gmail.com>
 Standards-Version: 4.6.1
 Build-Depends: 
- debhelper-compat (= 13), golang-go, ronn
+ debhelper-compat (= 13), golang-go, ronn, libdevmapper-dev
 Rules-Requires-Root: no
 
 Package: booster
 Architecture: linux-any
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1
 Provides: booster
 Description: booster initramfs generation
