--- a/debian/control
+++ b/debian/control
@@ -10,5 +10,10 @@ Rules-Requires-Root: no
 Package: booster
 Architecture: linux-any
 Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox
-Provides: booster
 Description: booster initramfs generation
+
+Package: booster-placeholder
+Architecture: linux-any
+Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox
+Provides: booster (= ${binary:Version})
+Description: PLACEHOLDER FOR ISO BUILDS DO NOT USE.
