--- a/debian/rules
+++ b/debian/rules
@@ -6,5 +6,9 @@ export DH_VERBOSE = 1
 override_dh_dwz:
 	echo "disabled"
 
+override_dh_install:
+	dh_install
+	cp -rvf debian/booster debian/booster-temp
+
 %:
 	dh $@
