--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ Rules-Requires-Root: no
 
 Package: booster
 Architecture: linux-any
-Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox
+Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, console-data, lvm2
 Replaces: booster-temp
 Conflicts: booster-temp
 Description: booster initramfs generation
