--- a/debian/control
+++ b/debian/control
@@ -9,20 +9,20 @@ Rules-Requires-Root: no
 
 Package: booster
 Architecture: linux-any
-Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, console-data, lvm2, pciutils
+Depends: ${misc:Depends}, ${shlibs:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, console-data, lvm2, pciutils
 Replaces: booster-temp
 Conflicts: booster-temp
 Description: booster initramfs generation
 
 Package: booster-placeholder
 Architecture: linux-any
-Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, pciutils
+Depends: ${misc:Depends}, ${shlibs:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, pciutils
 Provides: booster (= ${binary:Version})
 Description: PLACEHOLDER FOR ISO BUILDS DO NOT USE.
 
 Package: booster-temp
 Architecture: linux-any
-Depends: ${misc:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, pciutils
+Depends: ${misc:Depends}, ${shlibs:Depends}, libdevmapper-dev, libdevmapper-event1.02.1, libdevmapper1.02.1, busybox, pciutils
 Provides: booster (= ${binary:Version})
 Replaces: booster
 Conflicts: booster
